# gdal_study

./: .gitignore  CMakeLists.txt  Dockerfile  create_dataset_selt_result.tiff  docker_command
src/: create_dataset_self.cc  driver_manager_test.cc  geo_pix_transform.cc  get_dataset_info.cc  open_file.cc
test/: test_hello.cc
